--- a/termini.html
+++ b/termini.html
@@ -189,37 +189,35 @@
         }
 
         .donation-info {
-            background-color: #f8f9fa;
-            border-left: 4px solid var(--primary);
+            background-color: #fff;
             padding: 1.5rem;
             margin: 2rem 0;
-            border-radius: 0 8px 8px 0;
-            font-size: 1.2rem;
-            color: var(--text);
+            border-radius: 8px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
 
         .donation-info p {
-            font-weight: bold;
-            margin-bottom: 1rem;
-        }
-
-        .donation-info ol {
-            padding-left: 1.5rem;
-        }
-
-        .donation-info ol li {
-            margin: 1rem 0;
-            font-size: 1rem;
+            margin-bottom: 1.5rem;
         }
 
         .donation-info a {
             color: var(--primary);
-            font-weight: bold;
             text-decoration: none;
+            border-bottom: 1px solid transparent;
+            transition: border-color 0.3s;
         }
 
         .donation-info a:hover {
-            text-decoration: underline;
+            border-bottom-color: var(--primary);
+        }
+
+        .donation-info ol {
+            padding-left: 1.5rem;
+            margin: 0;
+        }
+
+        .donation-info ol li {
+            margin-bottom: 1rem;
         }
 
         @media (max-width: 768px) {
