--- a/termini.html
+++ b/termini.html
@@ -305,16 +305,16 @@
 
             <h2>Procedura di Donazione</h2>
             <div class="donation-info">
-                <p>Per valutare i titoli, vi preghiamo di seguire questi passaggi:</p>
+                <p>Per valutare i titoli, ti preghiamo di seguire questi passaggi:</p>
                 <ol>
-                    <li>Compilate l'<a href="https://bibliotecamorante.github.io/donazione/" target="_blank">apposito modulo</a>.</li>
-                    <li>Scaricate il documento autogenerato.</li>
-                    <li>Inviate il documento via email all'indirizzo: <a href="mailto:l.daniello@bibliotechediroma.it">l.daniello@bibliotechediroma.it</a>.</li>
+                    <li>Compila l'<a href="https://bibliotecamorante.github.io/donazione/" target="_blank">apposito modulo</a>.</li>
+                    <li>Scarica il documento autogenerato.</li>
+                    <li>Invia il documento via email all'indirizzo: <a href="mailto:l.daniello@bibliotechediroma.it">l.daniello@bibliotechediroma.it</a>.</li>
                 </ol>
             </div>
 
             <p>Le opere accettate entreranno a far parte del patrimonio della biblioteca e non potranno essere reclamate. La catalogazione seguirà i tempi stabiliti dalla biblioteca secondo le priorità interne.</p>
-            <p>Il materiale non idoneo potrà essere distribuito gratuitamente attraverso il Book Crossing presso il front office.</p>
+         <p>Il materiale non idoneo per la biblioteca potrà essere destinato ad altri utilizzi che la biblioteca riterrà opportuni (donazione, scambi o bookcrossing), senza alcun vincolo per quest'ultima.</p>
         </section>
     </main>
 
