--- a/termini.html
+++ b/termini.html
@@ -10,12 +10,200 @@
     <style>
         :root {
             --primary: #970a2c;
+            --text: #180207;
+            --bg: #f3f4f6;
         }
+
+        body {
+            background-color: var(--bg);
+            color: var(--text);
+            font-family: 'Space Grotesk', sans-serif;
+            margin: 0;
+            font-size: 20px;
+            line-height: 30px;
+            letter-spacing: normal;
+            word-spacing: 0px;
+        }
+
         header {
             background-color: var(--primary);
         }
+
         .font-space {
             font-family: 'Space Grotesk', sans-serif;
+        }
+
+        .header-logo img {
+            height: 100px;
+            filter: brightness(0) invert(1);
+        }
+
+        .header-logo {
+            display: flex;
+            gap: 10rem;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .header-logo img:nth-child(2) {
+            height: 200px;
+        }
+
+        main {
+            max-width: 800px;
+            margin: 2rem auto;
+            padding: 2rem;
+            background-color: #fff;
+            border-radius: 12px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .intro {
+            font-size: 2rem;
+            font-weight: bold;
+            color: var(--primary);
+            text-align: left;
+            margin-bottom: 2rem;
+        }
+
+        h2 {
+            color: var(--primary);
+            font-size: 1.5rem;
+            margin-bottom: 1.5rem;
+            padding-bottom: 0.5rem;
+            border-bottom: 2px solid var(--primary);
+        }
+
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        ul li {
+            padding: 0.5rem 0;
+            position: relative;
+            padding-left: 1.5rem;
+        }
+
+        ul li::before {
+            content: "•";
+            color: var(--primary);
+            font-weight: bold;
+            position: absolute;
+            left: 0;
+        }
+
+        p {
+            margin-bottom: 1.5rem;
+        }
+
+        a {
+            color: var(--primary);
+            text-decoration: none;
+            border-bottom: 1px solid transparent;
+            transition: border-color 0.3s;
+        }
+
+        a:hover {
+            border-bottom-color: var(--primary);
+        }
+
+        footer {
+            background-color: var(--primary);
+            color: #fff;
+            text-align: center;
+            padding: 1rem 0;
+            margin-top: 3rem;
+        }
+
+        footer a {
+            color: #fff;
+            border-bottom: 1px solid transparent;
+        }
+
+        footer a:hover {
+            border-bottom-color: #fff;
+        }
+
+        .contact-info {
+            background: #f8f9fa;
+            border-left: 4px solid var(--primary);
+            padding: 1.5rem;
+            margin: 2rem 0;
+            border-radius: 0 8px 8px 0;
+        }
+
+        .contact-info p {
+            margin: 0 0 0.5rem 0;
+        }
+
+        .contact-info a {
+            display: inline-block;
+            margin-top: 0.5rem;
+            font-weight: 500;
+            padding: 0.5rem 1rem;
+            background-color: var(--primary);
+            color: white;
+            border-radius: 4px;
+            transition: all 0.3s ease;
+        }
+
+        .contact-info a:hover {
+            background-color: #7a0824;
+            border-bottom-color: transparent;
+            transform: translateY(-2px);
+        }
+
+        .donation-info {
+            background-color: #fff;
+            padding: 1.5rem;
+            margin: 2rem 0;
+            border-radius: 8px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .donation-info p {
+            margin-bottom: 1.5rem;
+        }
+
+        .donation-info a {
+            color: var(--primary);
+            text-decoration: none;
+            border-bottom: 1px solid transparent;
+            transition: border-color 0.3s;
+        }
+
+        .donation-info a:hover {
+            border-bottom-color: var(--primary);
+        }
+
+        .donation-info ol {
+            padding-left: 1.5rem;
+            margin: 0;
+        }
+
+        .donation-info ol li {
+            margin-bottom: 1rem;
+        }
+
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 1.75rem;
+            }
+
+            header img {
+                height: 60px;
+            }
+
+            .header-logo {
+                flex-direction: column;
+                gap: 1rem;
+            }
+
+            main {
+                margin: 1rem;
+                padding: 1.5rem;
+            }
         }
     </style>
 </head>
@@ -63,6 +251,9 @@
             </div>
         </div>
     </header>
+
+
+
 
 
 
