--- a/termini.html
+++ b/termini.html
@@ -66,13 +66,27 @@
             margin-bottom: 2rem;
         }
 
-        h2 {
-            color: var(--primary);
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
-            padding-bottom: 0.5rem;
-            border-bottom: 2px solid var(--primary);
-        }
+      h2 {
+    color: var(--primary);
+    font-size: 2rem; /* Aumentata la dimensione del font */
+    font-weight: 600; /* Rende il titolo più in evidenza con un font più spesso */
+    margin-bottom: 1.5rem;
+    padding-bottom: 0.5rem;
+    border-bottom: 3px solid var(--primary); /* Linea sottostante più spessa */
+    text-transform: uppercase; /* Rende i titoli in maiuscolo per dare maggiore impatto */
+    letter-spacing: 0.05rem; /* Aggiunge una leggera spaziatura tra le lettere */
+}
+
+.intro {
+    font-size: 2.25rem; /* Aumentata la dimensione per l'introduzione */
+    font-weight: 700; /* Grassetto per evidenziare meglio l'introduzione */
+    color: var(--primary);
+    text-align: left;
+    margin-bottom: 2rem;
+    text-transform: uppercase; /* Rende il testo in maiuscolo */
+    letter-spacing: 0.1rem; /* Aumenta la spaziatura tra le lettere */
+}
+
 
         ul {
             list-style-type: none;
