--- a/termini.html
+++ b/termini.html
@@ -66,25 +66,22 @@
             margin-bottom: 2rem;
         }
 
-      h2 {
+       h2 {
     color: var(--primary);
-    font-size: 2rem; /* Aumentata la dimensione del font */
-    font-weight: 600; /* Rende il titolo più in evidenza con un font più spesso */
+    font-size: 1.8rem;  /* Aumenta la dimensione del font */
     margin-bottom: 1.5rem;
     padding-bottom: 0.5rem;
-    border-bottom: 3px solid var(--primary); /* Linea sottostante più spessa */
-    text-transform: uppercase; /* Rende i titoli in maiuscolo per dare maggiore impatto */
-    letter-spacing: 0.05rem; /* Aggiunge una leggera spaziatura tra le lettere */
+    border-bottom: 3px solid var(--primary); /* Spessore maggiore per il bordo */
+    padding-top: 1.5rem; /* Distanza maggiore sopra al titolo */
+    background-color: #f9f9f9; /* Sfondo chiaro per isolare il titolo */
+    border-radius: 8px; /* Angoli arrotondati per il background */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Aggiungi un'ombra leggera per il distacco */
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
-.intro {
-    font-size: 2.25rem; /* Aumentata la dimensione per l'introduzione */
-    font-weight: 700; /* Grassetto per evidenziare meglio l'introduzione */
-    color: var(--primary);
-    text-align: left;
-    margin-bottom: 2rem;
-    text-transform: uppercase; /* Rende il testo in maiuscolo */
-    letter-spacing: 0.1rem; /* Aumenta la spaziatura tra le lettere */
+h2 + p {
+    margin-top: 1rem; /* Aggiunge spazio tra il titolo e il paragrafo */
 }
 
 
