--- a/termini.html
+++ b/termini.html
@@ -71,15 +71,17 @@
             margin-bottom: 2rem;
         }
 
-        h2 {
-            color: var(--primary);
-            font-size: 1.8rem;
-            margin: 3.5rem 0 2rem;
-            padding-bottom: 0.75rem;
-            border-bottom: 3px solid var(--primary);
-            text-transform: uppercase;
-            letter-spacing: 0.05em;
-        }
+       h2 {
+    color: var(--primary);
+    font-size: 2.2rem;  /* Aumentata la dimensione del font */
+    margin: 4rem 0 2.5rem;  /* Maggiore distanza tra i titoli e il contenuto */
+    padding-bottom: 1rem;  /* Maggiore spazio sotto il titolo */
+    border-bottom: 4px solid var(--primary);  /* Bordo più spesso sotto il titolo */
+    text-transform: uppercase;
+    letter-spacing: 0.1em;  /* Maggiore spaziatura tra le lettere */
+    font-weight: bold;  /* Più enfasi sul testo */
+}
+
 
         ul {
             list-style-type: none;
