--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ function createBookEntry() {
 
     bookDiv.innerHTML = `
         <div class="flex justify-between items-center mb-4">
-            <span class="book-counter flex items-center justify-center w-6 h-6 rounded-full text-white font-semibold text-sm" style="background-color: #970a2c">${bookCount}</span>
+            <span class="book-counter flex items-center justify-center w-6 h-6 rounded-full text-white font-semibold text-sm" style="background-color: rgb(34, 197, 94)">${bookCount}</span>
             ${bookCount > 1 ? `
                 <button type="button" class="px-3 py-2 text-red-600 hover:text-red-700 font-bold text-2xl" onclick="removeBook(this)">✖</button>
             ` : ''}
