--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <script>
         // Initialize EmailJS with your public key
         (function() {
-            emailjs.init("YOUR_PUBLIC_KEY");
+            emailjs.init("z6OeY42qSulJ-8EcS");
         })();
 
         let bookCount = 0;
@@ -258,8 +258,8 @@
 
             try {
                 await emailjs.send(
-                    'YOUR_SERVICE_ID',
-                    'YOUR_TEMPLATE_ID', 
+                    'service_yepi8uu',
+                    'template_s1jmd7r', 
                     {
                         to_email: 'bibliotecamorante@gmail.com',
                         from_name: `${nome} ${cognome}`,
