--- a/index.html
+++ b/index.html
@@ -191,13 +191,16 @@
 
             // Updated formatting for books in email
 
+
             
-            const formattedBooks = books.map((book, index) => 
+            
+          // Updated formatting for books in email
+const formattedBooks = books.map((book, index) => 
     `Libro ${index + 1}:\n` +
-    `- **Titolo/Autore**: ${book.title}${book.author !== 'Non specificato' ? ' / ' + book.author : ''}\n` +
-    `- **Editore**: ${book.publisher}\n` +
-    `- **Anno**: ${book.year}\n` +
-    `- **ISBN**: ${book.isbn}\n`
+    ` - **Titolo/Autore**: ${book.title} / ${book.author !== 'Non specificato' ? book.author : 'Non specificato'}\n` +
+    ` - **Editore**: ${book.publisher}\n` +
+    ` - **Anno**: ${book.year}\n` +
+    ` - **ISBN**: ${book.isbn}\n`
 ).join('\n');
 
 
