--- a/index.html
+++ b/index.html
@@ -197,14 +197,13 @@
 // Updated formatting for books in email
 const formattedBooks = books.map((book, index) => 
     `Libro ${index + 1}:\n` +
-    `- Titolo/Autore: ${book.title} / ${book.author !== 'Non specificato' ? book.author : 'Non specificato'}\n` +
-    `- Editore: ${book.publisher}\n` +
-    `- Anno: ${book.year}\n` +
-    `- ISBN: ${book.isbn}\n`
+    `- **Titolo/Autore**: ${book.title} / ${book.author !== 'Non specificato' ? book.author : 'Non specificato'}\n` +
+    `- **Editore**: ${book.publisher}\n` +
+    `- **Anno**: ${book.year}\n` +
+    `- **ISBN**: ${book.isbn}\n`
 ).join('\n');
 
-
-            
+           
 
             const submitButton = event.target.querySelector('button[type="submit"]');
             submitButton.disabled = true;
