--- a/index.html
+++ b/index.html
@@ -191,13 +191,19 @@
         return;
     }
 
-    const formattedBooks = books.map((book, index) => 
-        `Libro ${index + 1}:\n` +
-        `- **Titolo/Autore**: ${book.title} / ${book.author !== 'Non specificato' ? book.author : 'Non specificato'}\n` +
-        `- **Editore**: ${book.publisher}\n` +
-        `- **Anno**: ${book.year}\n` +
-        `- **ISBN**: ${book.isbn}\n`
-    ).join('\n');
+
+            
+   const formattedBooks = books.map((book, index) => 
+    `Libro ${index + 1}:\n` +
+    `- Titolo/Autore: ${book.title} / ${book.author !== 'Non specificato' ? book.author : 'Non specificato'}\n` +
+    `- Editore: ${book.publisher}\n` +
+    `- Anno: ${book.year}\n` +
+    `- ISBN: ${book.isbn}\n`
+).join('\n');
+
+
+
+            
 
     const submitButton = event.target.querySelector('button[type="submit"]');
     submitButton.disabled = true;
