--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="bg-gray-50 p-4 rounded mb-5">
                 <label class="flex items-start gap-3">
                     <input type="checkbox" id="accept" name="accept" required class="w-5 h-5 mt-1">
-                    <span>Ho letto e accetto <a href="termini.html" target="_blank" rel="noopener noreferrer" class="text-blue-500 hover:underline">termini e condizioni</a></span>
+                    <span>Ho letto e accetto <a href="#" onclick="window.open('termini.html', '_blank'); return false;" class="text-blue-500 hover:underline">termini e condizioni</a></span>
                 </label>
                 <p class="hidden error-message text-sm text-red-500 mt-1">Devi accettare i termini e condizioni</p>
             </div>
