--- a/termini.html
+++ b/termini.html
@@ -211,7 +211,7 @@
             </a>
         </div>
         <div class="container">
-            <img src="logobianco.png" alt="Logo Biblioteche di Roma">
+            <img src="logo.png" alt="Logo Biblioteche di Roma">
             <img class="logo-morante" src="https://github.com/bibliotecamorante/donazione/raw/main/logomorante.png" alt="Logo Biblioteca Morante">
         </div>
     </header>
