--- a/termini.html
+++ b/termini.html
@@ -255,8 +255,7 @@
             </p>
             <ol>
                 <li>Compila l'apposito <a href="https://bibliotecamorante.github.io/donazione/" target="_blank">modulo</a>.</li>
-                <li>Scarica il documento autogenerato.</li>
-                <li>Invia il documento via email all'indirizzo: <a href="mailto:l.daniello@bibliotechediroma.it">l.daniello@bibliotechediroma.it</a>.</li>
+                <li>Clicca su "Invia Donazione" per trasmettere automaticamente la tua richiesta alla biblioteca.</li>
             </ol>
             
             <p>
