--- a/termini.html
+++ b/termini.html
@@ -255,7 +255,7 @@
             </p>
             <ol>
                 <li>Compila l'apposito <a href="https://bibliotecamorante.github.io/donazione/" target="_blank">modulo</a>.</li>
-                <li>Clicca su "Invia Donazione" per trasmettere automaticamente la tua richiesta alla biblioteca.</li>
+                <li>Clicca sul pulsante <span style="color: var(--primary); font-weight: bold; text-decoration: underline;">Invia Donazione</span> per trasmettere automaticamente la tua richiesta alla biblioteca.</li>
             </ol>
             
             <p>
