--- a/termini.html
+++ b/termini.html
@@ -254,7 +254,7 @@
                 Per valutare i titoli, ti preghiamo di seguire questi passaggi:
             </p>
             <ol>
-                <li>Compila l'apposito <span style="color: var(--primary); font-weight: bold;">modulo</span>.</li>
+                <li>Compila l'apposito <a href="https://bibliotecamorante.github.io/donazione/" style="color: var(--primary); font-weight: bold;">modulo</a>.</li>
                 <li>Clicca sul pulsante <span style="color: var(--primary); font-weight: bold;">Invia Donazione</span> per trasmettere automaticamente la tua richiesta alla biblioteca.</li>
             </ol>
             
