--- a/termini.html
+++ b/termini.html
@@ -71,7 +71,7 @@
         
         header img {
             height: 70px;
-            filter: brightness(0) invert(1);
+            filter: none
         }
         
         header .logo-morante {
