--- a/termini.html
+++ b/termini.html
@@ -76,7 +76,7 @@
         
         header .logo-morante {
             height: 180px;
-            filter: brightness(0) invert(1);
+            filter: none
         }
         
         header h1 {
