--- a/termini.html
+++ b/termini.html
@@ -69,14 +69,14 @@
            gap: 1rem; 
        }
        
-       header img {
+     header img {
     height: 70px;
-    filter: brightness(0) invert(1); 
+    filter: brightness(0);
 }
 
 header .logo-morante {
     height: 180px;
-    filter: none; 
+    filter: none;
 }
        
        header h1 {
