--- a/termini.html
+++ b/termini.html
@@ -69,9 +69,9 @@
            gap: 1rem; 
        }
        
-     header img {
+  header img {
     height: 70px;
-    filter: brightness(0);
+    filter: none;
 }
 
 header .logo-morante {
