--- a/termini.html
+++ b/termini.html
@@ -173,10 +173,11 @@
        }
 
        @media (max-width: 768px) {
-           body {
-               font-size: 16px;
-               line-height: 1.5;
-           }
+   body {
+       font-size: 20px; /* Mantenere la dimensione originale */
+       line-height: 1.5;
+       font-family: 'Space Grotesk', sans-serif; /* Assicurare Space Grotesk */
+   }
            
            header {
                padding: 1rem 0;
