--- a/termini.html
+++ b/termini.html
@@ -305,5 +305,16 @@
    <footer>
        <p>Scopri di più su <a href="https://www.bibliotechediroma.it/opac/.do" target="_blank">Biblioteche di Roma</a></p>
    </footer>
+
+   
+<script>
+document.querySelector('a[href="https://bibliotecamorante.github.io/donazione/"]').addEventListener('click', function(event) {
+    event.preventDefault();
+    window.open(this.href, '_blank', 'noopener,noreferrer');
+});
+</script>
+
+
+   
 </body>
 </html>
