--- a/index.html
+++ b/index.html
@@ -11,21 +11,27 @@
     <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg shadow-md">
 
         
-      <div class="flex flex-col items-center justify-center mb-10 text-center space-y-4 px-4">
+      <!-- Header container with vertical layout -->
+<div class="flex flex-col items-center justify-center mb-10 text-center space-y-4 px-4">
+    <!-- Logos container with horizontal layout -->
     <div class="flex items-center justify-center gap-4">
+        <!-- First logo - standard size -->
         <img 
             src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" 
             alt="Logo Biblioteca" 
             class="h-16 w-auto object-contain mb-3 md:h-16 sm:h-12" />
+        <!-- Second logo - increased size (h-32 = 8rem, h-28 for tablet, h-24 for mobile) -->
         <img 
             src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/morantenero.png" 
             alt="Logo Morante" 
-            class="h-24 w-auto object-contain mb-3 md:h-24 sm:h-20" />
+            class="h-32 w-auto object-contain mb-3 md:h-28 sm:h-24" />
     </div>
     <h1 class="text-3xl md:text-4xl text-slate-700 font-bold leading-tight text-center sm:text-xl md:text-3xl">
         Donazione alla Biblioteca Elsa Morante
     </h1>
 </div>
+
+        
 
         <div class="bg-blue-50 border-l-4 border-blue-500 p-4 mb-6 rounded-r">
             Compila il modulo per donare i tuoi libri alla biblioteca. I campi contrassegnati con * sono obbligatori
