--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 
         
       <!-- Header container with vertical layout -->
-        <div class="flex flex-col items-center justify-center mb-10 text-center space-y-4 px-4">
-    <div class="flex items-center justify-center gap-4">
+  <div class="flex flex-col items-center justify-center mb-10 text-center space-y-6 px-4">
+    <div class="flex flex-col sm:flex-row items-center justify-center gap-6 sm:gap-8">
         <img 
             src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/logo.png" 
             alt="Logo Biblioteca" 
-            class="h-16 w-auto object-contain mb-3 md:h-16 sm:h-12" />
+            class="h-20 w-auto object-contain sm:h-16 md:h-20" />
         <img 
             src="https://raw.githubusercontent.com/bibliotecamorante/donazione/main/morantenero.png" 
             alt="Logo Morante" 
-            class="h-40 w-auto object-contain mb-3 md:h-36 sm:h-32" />
+            class="h-48 w-auto object-contain sm:h-40 md:h-48" />
     </div>
-    <h1 class="text-3xl md:text-4xl text-slate-700 font-bold leading-tight text-center sm:text-xl md:text-3xl">
+    <h1 class="text-2xl sm:text-3xl md:text-4xl text-slate-700 font-bold leading-tight text-center">
         Donazione alla Biblioteca Elsa Morante
     </h1>
 </div>
